# monitor-sync

./: .gitignore  CMakeLists.txt  README.md  main.cpp  monitor-sync-client.desktop.in  monitor-sync-server.desktop.in
